--- a/data/home/portfolio.yaml
+++ b/data/home/portfolio.yaml
@@ -3,8 +3,8 @@ id: "portfolio"
 
 content:
   - image: "images/portfolio-ecommerce.png"
-    pretitle: "Portfolio Service"
-    title: "We developed an eCommerce website"
+    pretitle: "Servicios en la industria minera y geologica"
+    title: "Tenemos experiencia en "
     text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sed euismod quis sit gravida pharetra sit. Cursus vel enim pretium vulputate semper sem elit magna neque. Aliquet adipisc."
 
     buttons: 
