--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://www.example.com/"
+baseURL: "https://econsbaum.github.io/" #"https://www.example.com/"
 #theme: "up-business-theme"
 languageCode: "es"
 
